--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ a:hover {
   max-height: 0;
   overflow: hidden;
   transition: all 0.3 ease-in-out;
+  margin-top: 1rem;
 }
 
 .menu-links a {
@@ -116,6 +117,7 @@ a:hover {
 
 .menu-links li {
   list-style: none;
+  border-bottom: 0.1rem solid grey;
 }
 
 .menu-links.open {
@@ -278,6 +280,7 @@ section {
 
 #about {
   position: relative;
+  padding-bottom: 5rem;
 }
 
 .about-containers {
