--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ a:hover {
 
 .menu-links li {
   list-style: none;
-  border: 0.1rem solid grey;
+  border: 0.1rem solid rgb(187, 187, 187);
 }
 
 .menu-links li:not(:first-child) {
@@ -284,12 +284,12 @@ section {
 }
 
 .live-btn{
-  background-color: #22C55E;
+  background-color: rgb(53, 53, 53);
   color: white !important;
   border: none;
 
   &:hover{
-    background-color: #24af57;
+    background-color: black;
   }
 }
 
