--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -15,6 +15,10 @@
     height: auto;
     gap: 3rem;
   }
+
+  #contact{
+    margin: 3rem auto;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -55,6 +59,7 @@
     padding-left: 2rem;
     padding-right: 2rem;
   }
+  
 }
 
 @media screen and (max-width: 600px) {
@@ -122,5 +127,16 @@
     gap: 2rem;
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+}
+
+@media screen and (min-width: 1401px) {
+  #about {
+    gap: 3rem;
+    padding-bottom: 0;
+  }
+  .section-container {
+    height: auto;
+    gap: 1rem;
   }
 }
